Патч - Май - Update (v1.6) - Убран лишний код - Изменена 500 ошибка - Удалены некоторые файлы и изображения - Оптимизирована папка images и uploads - Обновлен раздел с артистами и треками (Добавлен +1 артист и +15 треков)